--- a/TODO.org
+++ b/TODO.org
@@ -3,7 +3,7 @@
 CLOSED: [2015-12-05 Sat 15:29]
  
  Link: file:~/devel/pdnsd/src/server.rs::DatagramEventResponse::Transmit(Some(size))%20=>%20{
-** TODO  events should be able to sent from outside      <2015-12-02 Wed 09:52>
+** TODO events should be able to sent from outside      <2015-12-02 Wed 09:52>
  
  Link: file:~/devel/pdnsd/src/server.rs::ServerEvent::Quit%20=>%20{
 ** DONE proper error handling here      <2015-12-02 Wed 09:52>
@@ -29,19 +29,23 @@ CLOSED: [2015-12-05 Sat 15:29]
 CLOSED: [2015-12-05 Sat 15:29]
  
  Link: file:~/devel/pdnsd/src/datagram.rs::self.buf.write_all(bytes).unwrap();
-** TODO  consider moving the entire object into the state      <2015-12-02 Wed 09:58>
+** TODO consider moving the entire object into the state      <2015-12-02 Wed 09:58>
  
  Link: file:~/devel/pdnsd/src/buf.rs::Reading,
-** TODO  implement read for bytebuf      <2015-12-02 Wed 09:59>
+** TODO implement read for bytebuf      <2015-12-02 Wed 09:59>
  
  Link: file:~/devel/pdnsd/src/buf.rs::{
-** TODO  write tests for bytebuf      <2015-12-02 Wed 09:59>
+** TODO write tests for bytebuf      <2015-12-02 Wed 09:59>
  
  Link: file:~/devel/pdnsd/src/buf.rs::else%20{
 ** DONE there's a double copy here <2015-12-13 Sun 15:05>
 CLOSED: [2015-12-13 Sun 15:13]
  
  Link: file:~/devel/pdnsd/src/query.rs:://%20FIXME:%20there's%20a%20double%20copy%20of%20the%20resource%20record%20here%20and%20it's%20ugly
-** TODO  do some validation      <2015-12-13 Sun 15:06>
+** TODO do some validation      <2015-12-13 Sun 15:06>
  
  Link: file:~/devel/pdnsd/src/dns.rs::Ok(self.0)
+** TODO remove this allocation somehow      <2015-12-16 Wed 22:59>
+
+ Link: file:~/devel/pdnsd/src/query.rs::let%20mut%20answers%20=%20vec!%5B%5D;
+ 
